# mensabot

./: .gitignore  README.md  Rust.gitignore  run_poll.sh
dep/: poll.py  register.py  run.sh
dep/docker/: Dockerfile  build.sh  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
rust/src/bot/: mod.rs
