[package]
name = "rust_telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10.1", features=["full"]} # , features = ["macros", "auto-send"] 
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
indexmap = "1.8.1"
rustc-serialize = "0.3"